<?xml version="1.0"?>
<package format="2">
  <name>pose_cov_ops</name>
  <version>0.2.1</version>
  <description>C++ library for SE(2/3) pose and 2D/3D point
    composition operations with uncertainty</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pose_cov_ops</url>

  <depend>mrpt2</depend> <!-- Depend on mrpt1 ROS pkgs -->

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mrpt_bridge</depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
