<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_cov_ops</name>
  <version>0.3.3</version>
  <description>C++ library for SE(2)/SE(3) pose composition operations with uncertainty</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/pose_cov_ops</url>

  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>
  
  <!-- BUILD TOOLS -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_gmock</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  
  <!-- COMMON DEPS -->
  <build_depend>ros_environment</build_depend>
  <depend>mrpt2</depend>
  <depend>geometry_msgs</depend>
  <test_depend>gtest</test_depend>

  <!-- ROS1 -->
  <depend           condition="$ROS_VERSION == 1">roscpp</depend>
  <test_depend      condition="$ROS_VERSION == 1">rosunit</test_depend>
  <test_depend      condition="$ROS_VERSION == 1">gtest</test_depend>

  <!-- ROS2 -->
  <test_depend      condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend      condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  <test_depend      condition="$ROS_VERSION == 2">ament_cmake_xmllint</test_depend>

  <export>
    <!--<build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>-->
    <build_type>cmake</build_type>
  </export>
</package>
